[gd_scene load_steps=6 format=3 uid="uid://cfftebso2e8lq"]

[ext_resource type="Script" path="res://instr.gd" id="1_su02o"]
[ext_resource type="Texture2D" uid="uid://40p6gl6xf6jq" path="res://thesisProjectAssets/background.jpg" id="1_whj0x"]
[ext_resource type="Texture2D" uid="uid://5108qmnagtw8" path="res://thesisProjectAssets/startButton.PNG" id="2_ijhft"]
[ext_resource type="Texture2D" uid="uid://ch5lty431y1m0" path="res://thesisProjectAssets/instrc.PNG" id="3_1ct4a"]
[ext_resource type="Texture2D" uid="uid://cxwsrl0n682kh" path="res://thesisProjectAssets/gmeLogo.png" id="4_7f2hu"]

[node name="Node" type="Node"]
script = ExtResource("1_su02o")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.423529)
offset_right = 1149.0
offset_bottom = 655.0
texture = ExtResource("1_whj0x")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 351.0
offset_top = 233.0
offset_right = 754.0
offset_bottom = 409.0
texture_normal = ExtResource("2_ijhft")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 369.0
offset_top = 370.0
offset_right = 754.0
offset_bottom = 573.0
texture_normal = ExtResource("3_1ct4a")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 462.0
offset_top = 40.0
offset_right = 648.0
offset_bottom = 236.0
texture = ExtResource("4_7f2hu")
expand_mode = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
